# firush

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml  setup.py
include/: firush.h
src/: firush.c  main.c
src/py/: __init__.py  base.py  tui.py  web.py
src/py/api/: api.c  api.pyi
src/py/testing/: test_firush_api.py
src/py/testing/assets/: sample.html
